polished some stuff

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
     </div>
     <hr>
     <div id = "profile-about-container">
-        <h2 class = "about-header">About Me: </h2>
+        <h2 class = "about-header">About Me </h2>
         <p id = "about-content"></p>
     </div>
 
     <hr>
     <div id = "profile-interests-container">
-        <h2 class = "interests-header">Interests: </h2>
+        <h2 class = "interests-header">Interests </h2>
         <ul id = "interests-list"></ul>
     </div>
     <hr>
@@ -88,7 +88,7 @@
     
     <div class = "footer">
         <div class = "contact">
-        <p>Contact Information: </p>
+        <p>Contact: </p>
         <a href = "https://github.com/kevgbailey" class = "github-link">Github</a>
         <p class = "email">/ kgbailey02@gmail.com</p>
     </div>
