added folders, whoops

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>FlirtFolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
     <div class = "header">
         <div class = "logo-and-title">
-        <img src = "flirtfolio_logo.png" alt = "logo" width = "70" height = "67" id = "logo">
+        <img src = "/img/flirtfolio_logo.png" alt = "logo" width = "70" height = "67" id = "logo">
         <h1 class = "menu-links" id = "home-link">FlirtFolio</h1>
     </div>
         <nav class = "nav">
@@ -23,10 +23,10 @@
         <p id = "about-dot-page"></p>
         <hr>
         <div id = "people-container"></div>
-        <img src = "edit-icon.png" alt = "edit icon" width = "75" height = "75" id = "edit-icon">
+        <img src = "/img/edit-icon.png" alt = "edit icon" width = "75" height = "75" id = "edit-icon">
         </div>
         <div id = "new-person-menu">
-            <img src = "x_mark.png" alt = "exit_button" width = "30" height = "30" id = "exit-button">
+            <img src = "/img/x_mark.png" alt = "exit_button" width = "30" height = "30" id = "exit-button">
             <form class = "name-form">
                 <label for = "firstName">First Name:</label>
                 <input type = "text" name = "firstName" id = "firstName">
@@ -45,7 +45,7 @@
 
     <div class = "bodysection" id = "profile" style = "padding-top: 90px;">
         <div id = "profile-head">
-        <img src = "profile-image.jpg" alt = "profile-image" width = "100" height = "130" id = "profile-image">
+        <img src = "/img/profile-image.jpg" alt = "profile-image" width = "100" height = "130" id = "profile-image">
         <div id = "profile-info">
         </div>
         
@@ -68,7 +68,7 @@
     <div class = "bodysection" id = "about">
         <h2>About Flirtfolio</h2>
         <section>
-            <img src = "happycouple.jpg" alt = "happy couple" width = "330" height = "230" id = "couple-image">
+            <img src = "/img/happycouple.jpg" alt = "happy couple" width = "330" height = "230" id = "couple-image">
             <p>Welcome to Flirtfolio, the innovative dating service designed to help you make the most of your dating life! We understand that dating can be exciting, but also overwhelming, especially when trying to manage multiple potential partners at the same time. That's why we created Flirtfolio - to simplify the dating process and help you focus on the people who matter most to you.</p>
 
                 <p> With Flirtfolio, you can easily keep track of all your dates, conversations, and interactions with the people you're currently dating. Our intuitive interface allows you to quickly see who you've been talking to and how your relationships are progressing. You can also set reminders for upcoming dates or events, and add notes about each match to help you remember important details.</p>
@@ -95,6 +95,6 @@
      <p>@2023</p>
     </div>
 
-	<script src="index.js"></script>
+	<script src="/js/index.js"></script>
   </body>
 </html>
